--- a/student-registration.html
+++ b/student-registration.html
@@ -139,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
                 <div class="lang-switcher">
-                    <a href="student-registration-ar.html" hreflang="ar" aria-label="Switch to Arabic">العربية</a>
+                    <a href="student-registration-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
