--- a/school-group-registration-ar.html
+++ b/school-group-registration-ar.html
@@ -1,16 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VMH5W3FET"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-7VMH5W3FET');
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TN9PGRFK');</script>
+<!-- End Google Tag Manager -->
 <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -39,21 +36,9 @@
     [
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ],
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+974-7444-9111",
-          "contactType": "Customer Service",
-          "email": "partnerships@eduexpoqatar.com"
-        }
+        "@type": "WebPage",
+        "name": "تسجيل المجموعات المدرسية | معرض قطر للتعليم 2026",
+        "url": "https://eduexpoqatar.com/school-group-registration-ar.html"
       },
       {
         "@context": "https://schema.org",
@@ -62,12 +47,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "الرئيسية",
-          "item": "/index-ar.html"
+          "item": "https://eduexpoqatar.com/index-ar.html"
         },{
           "@type": "ListItem",
           "position": 2,
           "name": "الزيارة",
-          "item": "/why-attend-ar.html"
+          "item": "https://eduexpoqatar.com/why-attend-ar.html"
         },{
           "@type": "ListItem",
           "position": 3,
@@ -78,10 +63,14 @@
     </script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TN9PGRFK"
+height="0" width="0" style="display:none;visibility:hidden" title="مدير علامات جوجل"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+            <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="شعار معرض قطر للتعليم 2026"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -131,7 +120,7 @@
                 <a href="booth-registration-ar.html" class="btn btn-primary btn-sm">احجز جناحك</a>
                 <a href="sponsorship-registration-ar.html" class="btn btn-primary btn-sm">كن راعيًا</a>
                 <div class="lang-switcher">
-                    <a href="school-group-registration.html" hreflang="en" aria-label="Switch to English">English</a>
+                    <a href="school-group-registration.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="UK Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
@@ -242,11 +231,13 @@
         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="تميمة البومة لمعرض قطر للتعليم توجه المجموعات المدرسية إلى نموذج التسجيل." class="school-group-reg-mascot">
     </main>
 
+    <div id="cookie-banner"></div>
+
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="شعار معرض قطر للتعليم 2026"></a>
+                    <a href="index-ar.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="شعار معرض قطر للتعليم 2026"></a>
                     <p>الحدث الرائد الذي يجمع قادة التعليم والمؤسسات والمبتكرين في منطقة الشرق الأوسط وشمال أفريقيا.</p>
                 </div>
                 <div class="footer-col">
@@ -257,6 +248,7 @@
                         <li><a href="why-exhibit-ar.html">للعارضين</a></li>
                         <li><a href="sponsorship-tiers-ar.html">للرعاة</a></li>
                         <li><a href="student-registration-ar.html">تسجيل الطلاب</a></li>
+                        <li><a href="blog-ar.html">المدونة</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -280,7 +272,7 @@
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
-                            <a href="tel:+97474449111">+974 7444 9111</a>
+                            <a href="tel:+97474449111" dir="ltr">+974 7444 9111</a>
                         </li>
                     </ul>
                     <div class="social-links">
@@ -296,77 +288,6 @@
         </div>
     </footer>
 
-    <!-- WhatsApp Chat -->
-    <a href="https://wa.me/97474449111" class="whatsapp-fab" target="_blank" aria-label="Chat on WhatsApp">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <!-- Exit Intent Modal -->
-    <div id="exit-intent-modal" class="modal-overlay">
-        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <h3 id="exit-modal-title">حمّل الملف التعريفي قبل المغادرة!</h3>
-            <p>احصل على الملف التعريفي الرسمي للعارضين والرعاة، شاملاً مخطط الأرضية وتفاصيل عائد الاستثمار، مباشرة إلى بريدك الإلكتروني.</p>
-            <button id="open-deck-form-btn" class="btn btn-primary">احصل على الملف</button>
-        </div>
-    </div>
-
-    <!-- Deck Request Modal -->
-    <div id="deck-request-modal" class="modal-overlay">
-        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <div id="deck-form-container">
-                <h3 id="deck-modal-title">احصل على الملف التعريفي الرسمي</h3>
-                <p>يرجى تقديم التفاصيل الخاصة بك لتلقي ملف العارضين والرعاة على الفور.</p>
-                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
-                    <input type="hidden" name="form_source" value="Deck Request Popup">
-                    <div class="form-group">
-                        <label for="deck-form-name">الاسم الكامل *</label>
-                        <input type="text" id="deck-form-name" name="name" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="deck-form-email">البريد الإلكتروني للعمل *</label>
-                        <input type="email" id="deck-form-email" name="email" required>
-                        <div class="error-message"></div>
-                    </div>
-                     <div class="form-group">
-                        <label for="deck-form-phone">رقم الجوال *</label>
-                        <input type="tel" id="deck-form-phone" name="phone" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="deck-form-designation">المسمى الوظيفي *</label>
-                            <input type="text" id="deck-form-designation" name="designation" required>
-                            <div class="error-message"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="deck-form-organization">المنظمة *</label>
-                            <input type="text" id="deck-form-organization" name="organization" required>
-                            <div class="error-message"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">حمّل الآن</button>
-                </form>
-            </div>
-            <div id="deck-form-success" style="display: none; text-align: center;">
-                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
-                <h3>شكرًا لك!</h3>
-                <p>يجب أن يبدأ التنزيل تلقائيًا. إذا لم يحدث ذلك، يرجى التحقق من مانع النوافذ المنبثقة أو المحاولة مرة أخرى.</p>
-            </div>
-        </div>
-    </div>
-    
-    <!-- Mobile Sticky Bar -->
-    <div id="mobile-sticky-bar">
-        <a href="booth-registration-ar.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>عارض</span></a>
-        <a href="sponsorship-registration-ar.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>راعٍ</span></a>
-        <a href="student-registration-ar.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>طالب</span></a>
-        <a href="speaker-registration-ar.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>متحدث</span></a>
-    </div>
-
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
