--- a/why-attend.html
+++ b/why-attend.html
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
                 <div class="lang-switcher">
-                    <a href="why-attend-ar.html" hreflang="ar" aria-label="Switch to Arabic">العربية</a>
+                    <a href="why-attend-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section id="why-attend-benefits">
             <div class="container">
                 <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.webp" alt="Qatar Education Expo's owl mascot for the leading education expo in the GCC." class="why-attend-mascot">
-                 <h2>Why Can't You Miss This Event?</h2>
+                 <h2>Why You Can't Afford to Miss This Event</h2>
                  <p class="subtitle">Whether you're a student planning your next steps or an educator shaping future minds, this is your gateway to opportunity.</p>
                  <div class="benefits-grid">
                     <div class="benefit-card">
@@ -158,17 +158,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <div class="benefit-card">
                         <i class="fas fa-user-tie"></i>
                         <h3>Expert Career Guidance</h3>
-                        <p>Receive free one-on-one <a href="career-counselling.html">career counselling</a>, psychometric testing, resume-building workshops, and guidance on scholarships from certified experts.</p>
+                        <p>Get free <a href="career-counselling.html">one-on-one career counselling</a>, psychometric tests, CV-building workshops, and scholarship guidance from certified experts.</p>
                     </div>
                      <div class="benefit-card">
                         <i class="fas fa-lightbulb"></i>
-                        <h3>Discover New Pathways</h3>
+                        <h3>Discover New Paths</h3>
                         <p>Learn about the latest in-demand majors, scholarship opportunities, and emerging career trends.</p>
                     </div>
                      <div class="benefit-card">
                         <i class="fas fa-network-wired"></i>
-                        <h3>Connect with Peers & Leaders</h3>
-                        <p>Network with fellow students, parents, school principals, and education industry leaders.</p>
+                        <h3>Network with Peers & Leaders</h3>
+                        <p>Connect with fellow students, parents, school principals, and education industry leaders.</p>
                     </div>
                  </div>
                  <div class="section-cta">
@@ -180,7 +180,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section id="decision-makers" class="bg-surface">
             <div class="container">
                 <h2>A Hub for Decision-Makers</h2>
-                <p class="subtitle">This is more than a student fair; it's a leadership summit where the future of education is shaped.</p>
+                <p class="subtitle">This isn't just a student fair; it's a leadership summit where the future of education is shaped.</p>
                 <div class="decision-makers-layout">
                     <div class="decision-makers-stats">
                         <div class="stat-group">
@@ -197,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                     <div class="decision-makers-chart">
-                        <h3>Attendee Breakdown</h3>
+                        <h3>Audience Breakdown</h3>
                         <div class="chart-item">
                             <div class="chart-label">High School Students</div>
                             <div class="chart-bar-container"><div class="chart-bar" style="width: 55%;">55%</div></div>
@@ -216,11 +216,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076630/owl-vr_mev0of.webp" alt="Qatar Education Expo's owl mascot wearing VR goggles, representing the forward-thinking nature of the event attendees." class="footer-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076630/owl-vr_mev0of.webp" alt="Qatar Education Expo's owl mascot wearing VR goggles, representing the futuristic nature of the event attendees." class="footer-mascot">
             </div>
         </section>
     </main>
-    
+
     <div id="cookie-banner"></div>
     <footer class="main-footer">
         <div class="container">
