--- a/why-exhibit.html
+++ b/why-exhibit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -131,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="booth-registration.html" class="btn btn-primary btn-sm">Book a Booth</a>
                 <a href="sponsorship-registration.html" class="btn btn-primary btn-sm">Sponsor Now</a>
                 <div class="lang-switcher">
-                    <a href="why-exhibit-ar.html" hreflang="ar" aria-label="Switch to Arabic">العربية</a>
+                    <a href="why-exhibit-ar.html" hreflang="ar" aria-label="Switch to Arabic"><span>العربية</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/qa.svg" alt="Qatar Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
@@ -182,6 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <h2>Who Should Exhibit?</h2>
                 <p class="subtitle">If you provide solutions for the education ecosystem,<br> Qatar Education Expo is your platform.</p>
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing to the list of who should exhibit." class="exhibit-mascot">
                 <div class="exhibitor-types-grid">
                     <div class="exhibitor-type-card">
                         <i class="fas fa-university"></i>
