--- a/why-exhibit-ar.html
+++ b/why-exhibit-ar.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="booth-registration-ar.html" class="btn btn-primary btn-sm">احجز جناحك</a>
                 <a href="sponsorship-registration-ar.html" class="btn btn-primary btn-sm">كن راعيًا</a>
                 <div class="lang-switcher">
-                    <a href="why-exhibit.html" hreflang="en" aria-label="Switch to English">English</a>
+                    <a href="why-exhibit.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="UK Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
