--- a/why-attend-ar.html
+++ b/why-attend-ar.html
@@ -42,18 +42,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       },
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "معرض قطر للتعليم 2026",
-        "url": "https://eduexpoqatar.com/index-ar.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
-        "sameAs": [
-          "https://twitter.com/qatarexpo2026",
-          "https://linkedin.com/company/qatarexpo2026",
-          "https://instagram.com/qatarexpo2026"
-        ]
-      },
-      {
-        "@context": "https://schema.org",
         "@type": "BreadcrumbList",
         "itemListElement": [{
           "@type": "ListItem",
@@ -132,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="booth-registration-ar.html" class="btn btn-primary btn-sm">احجز جناحك</a>
                 <a href="sponsorship-registration-ar.html" class="btn btn-primary btn-sm">كن راعيًا</a>
                 <div class="lang-switcher">
-                    <a href="why-attend.html" hreflang="en" aria-label="Switch to English">English</a>
+                    <a href="why-attend.html" hreflang="en" aria-label="Switch to English"><span>English</span><img src="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.0.0/flags/4x3/gb.svg" alt="UK Flag" class="lang-flag"></a>
                 </div>
             </div>
         </div>
