--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </a>
                     <!-- Article Card 2 -->
                     <a href="blog-post-2.html" class="article-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_600,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg" alt="A collage of scenic images from various countries like Japan, South Korea, and Germany." class="article-card__image">
+                        <img src="https://www.shutterstock.com/image-illustration/travel-concept-photographic-composition-famous-260nw-2566735559.jpg" alt="A collage of scenic images from various countries like Japan, South Korea, and Germany." class="article-card__image">
                         <div class="article-card__content">
                             <h3>5 Study Abroad Destinations You Haven't Considered (But Should)</h3>
                             <p class="article-card__excerpt">While the UK, USA, and Canada are popular choices, a world of high-quality, affordable education awaits in these hidden gems that offer unique cultural experiences and strong career prospects.</p>
