--- a/blog-post-1-ar.html
+++ b/blog-post-1-ar.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                     <!-- Author Box -->
                     <div class="author-box">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_200,h_200,c_fill,g_face,q_auto,f_auto/v1762646672/Gemini_Generated_Image_l6f5b9.jpg" alt="صورة شخصية للدكتورة عائشة الجابر" class="author-box__image">
+                        <img src="https://cdn.adu.ac.ae/images-container/images/default-source/conferences/cop28/dr-aishah.jpg?sfvrsn=c6e0dfc3_2" alt="صورة شخصية للدكتورة عائشة الجابر" class="author-box__image">
                         <div class="author-box__info">
                             <h4>د. عائشة الجابر</h4>
                             <p class="author-box__bio">د. الجابر هي خبيرة استراتيجية في مجال التعليم وصوت رائد في دمج التكنولوجيا في التعليم في منطقة الشرق الأوسط وشمال أفريقيا. بخبرة تزيد عن 15 عامًا، تقدم استشارات للجامعات حول كيفية تحديث عمليات القبول والمناهج الدراسية لمواكبة المستقبل.</p>
