--- a/blog-post-1-ar.html
+++ b/blog-post-1-ar.html
@@ -193,7 +193,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h2>قد يعجبك أيضاً</h2>
                     <div class="blog-grid">
                         <a href="blog-post-2-ar.html" class="article-card">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_600,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg" alt="مجموعة صور لمناظر طبيعية من بلدان مختلفة مثل اليابان وكوريا الجنوبية وألمانيا." class="article-card__image">
+                            <img src="https://www.shutterstock.com/image-illustration/travel-concept-photographic-composition-famous-260nw-2566735559.jpg" alt="مجموعة صور لمناظر طبيعية من بلدان مختلفة مثل اليابان وكوريا الجنوبية وألمانيا." class="article-card__image">
                             <div class="article-card__content">
                                 <h3>5 وجهات للدراسة في الخارج لم تفكر بها (لكن يجب عليك)</h3>
                                 <p class="article-card__excerpt">بينما تعد المملكة المتحدة والولايات المتحدة وكندا خيارات شائعة، ينتظرك عالم من التعليم عالي الجودة وبأسعار معقولة...</p>
