--- a/blog-post-2-ar.html
+++ b/blog-post-2-ar.html
@@ -43,7 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org",
       "@type": "BlogPosting",
       "headline": "5 وجهات للدراسة في الخارج لم تفكر بها (لكن يجب عليك)",
-      "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/w_1200,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg",
+      "image": "https://www.shutterstock.com/image-illustration/travel-concept-photographic-composition-famous-260nw-2566735559.jpg",
       "author": {
         "@type": "Person",
         "name": "د. عائشة الجابر"
@@ -145,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h1>5 وجهات للدراسة في الخارج لم تفكر بها (لكن يجب عليك)</h1>
                         <p class="blog-post-meta">بقلم د. عائشة الجابر | تاريخ النشر: 12 نوفمبر 2025</p>
                     </div>
-                    <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_1200,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg" alt="مجموعة صور لمناظر طبيعية من بلدان مختلفة مثل اليابان وكوريا الجنوبية وألمانيا، تمثل خيارات متنوعة للدراسة في الخارج." class="blog-post-image">
+                    <img src="https://www.shutterstock.com/image-illustration/travel-concept-photographic-composition-famous-260nw-2566735559.jpg" alt="مجموعة صور لمناظر طبيعية من بلدان مختلفة مثل اليابان وكوريا الجنوبية وألمانيا، تمثل خيارات متنوعة للدراسة في الخارج." class="blog-post-image">
                 
                     <p>عند التفكير في الدراسة في الخارج، غالبًا ما تتبادر إلى الذهن وجهات مثل المملكة المتحدة والولايات المتحدة وكندا أولاً. في حين أن هذه البلدان تقدم فرصًا تعليمية ممتازة، إلا أن هناك عالمًا من البدائل عالية الجودة وبأسعار معقولة وغنية ثقافيًا في انتظارك. يمكن أن يؤدي توسيع آفاقك إلى رحلة أكاديمية فريدة وميزة تنافسية في حياتك المهنية المستقبلية. إليك خمس وجهات دراسية غير معروفة يجب أن تفكر فيها بالتأكيد.</p>
                     
