--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -42,7 +42,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context": "https://schema.org",
       "@type": "BlogPosting",
       "headline": "5 Study Abroad Destinations You Haven't Considered (But Should)",
-      "image": "https://res.cloudinary.com/dj3vhocuf/image/upload/w_1200,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg",
+      "image": "https://www.shutterstock.com/image-illustration/travel-concept-photographic-composition-famous-260nw-2566735559.jpg",
       "author": {
         "@type": "Person",
         "name": "Dr. Aisha Al-Jaber"
@@ -144,7 +144,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h1>5 Study Abroad Destinations You Haven't Considered (But Should)</h1>
                         <p class="blog-post-meta">By Dr. Aisha Al-Jaber | Published on November 12, 2025</p>
                     </div>
-                    <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/w_1200,q_auto,f_auto/v1762646674/Gemini_Generated_Image_2_j9fxtc.jpg" alt="A collage of scenic images from various countries like Japan, South Korea, and Germany, representing diverse study abroad options." class="blog-post-image">
+                    <img src="https://www.shutterstock.com/image-illustration/travel-concept-photographic-composition-famous-260nw-2566735559.jpg" alt="A collage of scenic images from various countries like Japan, South Korea, and Germany, representing diverse study abroad options." class="blog-post-image">
                 
                     <p>When thinking about studying abroad, destinations like the UK, USA, and Canada often come to mind first. While these countries offer excellent educational opportunities, a world of high-quality, affordable, and culturally rich alternatives awaits. Broadening your horizons can lead to a unique academic journey and a competitive edge in your future career. Here are five underrated study abroad destinations you should definitely consider.</p>
                     
