--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -143,6 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
         <section id="contact-methods" class="bg-surface">
             <div class="container">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076630/owl-vr_mev0of.webp" alt="Qatar Education Expo's owl mascot wearing VR goggles." class="contact-section-mascot">
                 <h2>How Can We Help?</h2>
                 <p class="subtitle">Choose the best way to get in touch with our team.</p>
                 <div class="contact-cards-grid">
@@ -161,8 +161,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      <div class="contact-card">
                         <i class="fab fa-whatsapp"></i>
                         <h4>Quick Chat</h4>
-                        <p>For quick questions, reach out to us directly on WhatsApp for a fast response.</p>
-                        <a href="https://wa.me/97474449111" target="_blank" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> Chat Now</a>
+                        <p>For quick questions, connect with us directly on WhatsApp.</p>
+                        <a href="https://wa.me/97474449111" target="_blank" class="btn btn-primary">Message on WhatsApp</a>
                     </div>
                 </div>
             </div>
