--- a/contact-ar.html
+++ b/contact-ar.html
@@ -137,7 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="contact-cards-grid">
                     <!-- Card 1: General -->
                     <div class="contact-card">
-                        <i class="fas fa-envelope-open-text"></i>
+                        <i class="fas fa-envelope"></i>
                         <h4>استفسارات عامة وللحضور</h4>
                         <p>للأسئلة حول الحضور، التسجيل، أو معلومات عامة.</p>
                         <a href="mailto:attendees@eduexpoqatar.com" class="contact-email">attendees@eduexpoqatar.com</a>
@@ -154,7 +154,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="تميمة البومة لمعرض قطر للتعليم ترتدي سماعة رأس، ممثلةً خيار الدردشة السريعة للدعم." class="contact-quick-chat-mascot">
                         <i class="fab fa-whatsapp"></i>
                         <h4>دردشة سريعة</h4>
-                        <p>للأسئلة السريعة، تواصل معنا مباشرة عبر واتساب.</p>
+                        <p>للأسئلة السريعة، تواصل معنا مباشرةً عبر واتساب.</p>
                         <a href="https://wa.me/97474449111" target="_blank" class="btn btn-primary">راسلنا على واتساب</a>
                     </div>
                 </div>
