--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -147,9 +148,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p class="subtitle">Choose the best way to get in touch with our team.</p>
                 <div class="contact-cards-grid">
                     <div class="contact-card">
-                        <i class="fas fa-envelope-open-text"></i>
+                        <i class="fas fa-envelope"></i>
                         <h4>General & Attendee Inquiries</h4>
-                        <p>For questions about attending, registration, or general event information.</p>
+                        <p>For questions about attending, registration, or general information.</p>
                         <a href="mailto:attendees@eduexpoqatar.com" class="contact-email">attendees@eduexpoqatar.com</a>
                     </div>
                      <div class="contact-card">
@@ -158,11 +159,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p>Discuss partnership opportunities and book your booth.</p>
                         <a href="mailto:partnerships@eduexpoqatar.com" class="contact-email">partnerships@eduexpoqatar.com</a>
                     </div>
-                     <div class="contact-card">
+                     <div class="contact-card quick-chat-card-with-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot wearing a headset, representing the quick chat support option." class="contact-quick-chat-mascot">
                         <i class="fab fa-whatsapp"></i>
                         <h4>Quick Chat</h4>
-                        <p>For quick questions, reach out to us directly on WhatsApp for a fast response.</p>
-                        <a href="https://wa.me/97474449111" target="_blank" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> Chat Now</a>
+                        <p>For quick questions, connect with us directly on WhatsApp.</p>
+                        <a href="https://wa.me/97474449111" target="_blank" class="btn btn-primary">Message on WhatsApp</a>
                     </div>
                 </div>
             </div>
